--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,17 @@
 language: php
+
 php:
-  - 5.4
+  - 5.2
   - 5.3
+  - 5.4
+
+env:
+  - DB=mysql
+
+before_script:
+  - if [[ "$DB" == "mysql" ]]; then mysql -e "create database IF NOT EXISTS woola;" -uroot; fi
+
+script: phpunit --configuration phpunit_$DB.xml --coverage-text
+
+notifications:
+  irc: "i#perry.asia"
