--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ env:
 before_script:
   - if [[ "$DB" == "mysql" ]]; then mysql -e "create database IF NOT EXISTS woola;" -uroot; fi
 
-script: phpunit --configuration phpunit_$DB.xml --coverage-text
+script: phpunit --coverage-text
 
 notifications:
-  irc: "i#perry.asia"
+  email:
+    - travis-ci@liip.ch
